test/config/ytt/ingress/istio/istio-certmanager-webhook.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "net-certmanager-webhook"
  namespace: "knative-serving"
  labels:
    networking.knative.dev/ingress-provider: istio
spec:
  selector:
    matchLabels:
      app: net-certmanager-webhook
  portLevelMtls:
    8443:
      mode: PERMISSIVE
