test/config/ytt/ingress/istio/istio-deploy-fix.yaml
# An istio issue causes the ingress pods to not start
# see: https://github.com/istio/istio/issues/31084
#
# We work around this by hinting to kapp the order
# these resources should be applied. Thus wait for
# istio to be running before applying net-istio
# customizations
#
# TODO - remove when it's fixed

#@ load("@ytt:overlay", "overlay")
#@ load("helpers.lib.yaml", "subset", "label_subset")


# istio's yamls has some null values which ytt doesn't replace by default
# so instead we remove them
#@overlay/match by=overlay.subset({"metadata":{"annotations":None}}), expects="1+"
---
metadata:
  #@overlay/remove
  annotations: null

#@overlay/match by=subset(namespace="istio-system"), expects="1+"
---
metadata:
  #@overlay/match missing_ok=True
  annotations:
    #@overlay/match missing_ok=True
    kapp.k14s.io/change-group: "istio.io"

#@overlay/match by=label_subset("networking.knative.dev/ingress-provider", "istio"), expects="1+"
---
metadata:
  #@overlay/match missing_ok=True
  #@overlay/match-child-defaults missing_ok=True
  annotations:
    kapp.k14s.io/change-group: "knative.dev/net-istio"
    kapp.k14s.io/change-rule: "upsert after upserting istio.io"
