test/config/ytt/ingress/istio/istio-ingress-class.yaml
#@ load("@ytt:overlay", "overlay")

#@data/values
---
serving:
  ingress_class: istio.ingress.networking.knative.dev
