test/config/ytt/ingress/istio/istio-ingressgateway-replicas.yaml
#@ load("@ytt:overlay", "overlay")
#@ load("helpers.lib.yaml", "subset")

#@overlay/match by=subset(kind="Deployment", name="istio-ingressgateway")
---
spec:
  #@overlay/match missing_ok=True
  replicas: 6
